enhance: add sitemap

--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -15,7 +15,10 @@
     "lint": "next lint",
     "export": "next build && next export",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "postbuild": "next-sitemap --config sitemap.js",
+    "build:sitemap:ts": "tsc -p tsconfig.sitemap.json",
+    "build:sitemap": "next-sitemap --config dist/scripts/sitemap.js",
+    "postinstall": "yarn build:sitemap:ts",
+    "postbuild": "yarn build:sitemap",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "clean": "yarn rimraf public data out",
