--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -48,6 +48,7 @@
     "eslint-config-next": "^11.1.2",
     "eslint-plugin-cypress": "^2.12.1",
     "fs-extra": "^10.0.0",
+    "har-validator": "^5.1.5",
     "typescript": "^4.4.3"
   }
 }
