--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -29,7 +29,7 @@
     "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
-    "next": "^11.1.2",
+    "next": "12",
     "next-seo": "^4.27.0",
     "next-sitemap": "^1.6.168",
     "react": "^17.0.2",
