chore: add sitemap.js directly

--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -15,9 +15,8 @@
     "lint": "next lint",
     "export": "next build && next export",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "build:sitemap:ts": "tsc -p tsconfig.sitemap.json",
-    "build:sitemap": "next-sitemap --config dist/scripts/sitemap.js",
-    "postinstall": "yarn build:sitemap:ts",
+    "build:sitemap:ts": "tsc -p tsconfig.sitemap.json && mv dist/scripts/sitemap.js .",
+    "build:sitemap": "next-sitemap --config sitemap.js",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "clean": "yarn rimraf public data out",
