--- a/packages/common-server/package.json
+++ b/packages/common-server/package.json
@@ -65,7 +65,8 @@
     "pino-pretty": "^4.3.0",
     "simple-git": "^2.24.0",
     "tmp": "^0.2.1",
-    "vscode-uri": "^2.1.2"
+    "vscode-uri": "^2.1.2",
+    "yaml-unist-parser": "^1.3.1"
   },
   "devDependencies": {
     "@types/comment-json": "^1.1.1",
