fix: Correctly handle note titles containing international characters

--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -60,7 +60,7 @@
     "nanoid-dictionary": "^4.3.0",
     "qs": "^6.10.1",
     "semver": "^7.3.2",
-    "title": "^3.4.2",
+    "@dendronhq/title": "^3.4.3",
     "vscode-uri": "^2.1.2",
     "yamljs": "^0.3.0"
   },
