chore: refactors and fix tests to run

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -195,7 +195,7 @@
       },
       {
         "command": "dendron.lookupNoteAutoComplete",
-        "title": "Dendron:: hidden",
+        "title": "Dendron: hidden",
         "desc": "Auto complete note lookup",
         "when": "dendron:pluginActive && dendron:noteLookupActive && !editorFocus && !view"
       },
@@ -559,6 +559,12 @@
       }
     ],
     "menus": {
+      "commandPalette": [
+        {
+          "command": "dendron.lookupNoteAutoComplete",
+          "when": "false"
+        }
+      ],
       "view/title": [
         {
           "command": "dendron.backlinks.expandAll",
