chore: added gdoc export in pods v2

--- a/packages/pods-core/package.json
+++ b/packages/pods-core/package.json
@@ -62,6 +62,7 @@
     "ajv-formats": "^2.1.0",
     "csv-writer": "^1.6.0",
     "emailjs": "^3.4.0",
+    "form-data": "^4.0.0",
     "fs-extra": "^9.0.1",
     "googleapis": "^88.2.0",
     "image-downloader": "^4.0.3",
