enhance(publish): don't wait for engine to load notes
Squashed commit of the following:

commit 0a4aa1d88e18cacaeea7c235915787ca46d4ccd6
Author: Kevin <kevin@dendron.so>
Date:   Tue Nov 30 07:40:17 2021 -0800

    snap

commit 3c8be0c574ef06c74ed8fc42f080fa2ef339858e
Author: Kevin <kevin@dendron.so>
Date:   Tue Nov 30 07:38:48 2021 -0800

    update next.config

commit c3d7eaa669a34d2c788a8661a8cbc3c76d358ffc
Author: Kevin <kevin@dendron.so>
Date:   Sat Nov 27 14:13:10 2021 -0800

    enhance(publish): don't wait for engine to load notes

commit ba8ce6e4e92c582c7175c1e6c96b456acd755a07
Author: Kevin <kevin@dendron.so>
Date:   Sat Nov 27 13:12:56 2021 -0800

    Revert "enhance(publish): better position sidebar, main content and footer (#1696)"

    This reverts commit 70c1e2409c2f39f48869f359e3bbcc8e3e9ae1ff.

commit 562548ab76111e6d0bc4ecc510e72035ec7f4c24
Author: Kevin <kevin@dendron.so>
Date:   Thu Nov 25 16:45:15 2021 -0800

    enahnce(publish): upgrade to nextjs@12

commit 75f6561ecabb90acefd101e1fedf31b483f2ccda
Author: Kevin <kevin@dendron.so>
Date:   Fri Nov 26 12:24:29 2021 -0800

    chore: add sitemap.js directly

commit f78f740b4a1172fa8fca1da35cc1944c48d15189
Author: Kevin <kevin@dendron.so>
Date:   Thu Nov 25 16:28:27 2021 -0800

    add tests

commit 4a93fce1ee259bc0b215ea545aae37094ab1dfbb
Author: Kevin <kevin@dendron.so>
Date:   Thu Nov 25 15:19:39 2021 -0800

    add cli

commit f246d0b7df3f0f80df897ad3cac5149e6500a8c2
Author: Kevin <kevin@dendron.so>
Date:   Thu Nov 25 09:57:25 2021 -0800

    remove old js file

commit 021ecc146e279ac9a5755f3c716c9cf640cee2c2
Author: Kevin <kevin@dendron.so>
Date:   Thu Nov 25 09:52:18 2021 -0800

    enhance: add sitemap

--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -38,7 +38,8 @@
     "react-ga": "^3.3.0",
     "react-ga4": "^1.0.6",
     "react-redux": "^7.2.3",
-    "sass": "^1.41.1"
+    "sass": "^1.41.1",
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
@@ -48,7 +49,6 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "eslint-plugin-cypress": "^2.12.1",
-    "fs-extra": "^10.0.0",
     "har-validator": "^5.1.5",
     "typescript": "^4.4.3"
   }
