fix: add cross-env for win build script

--- a/packages/dendron-plugin-views/package.json
+++ b/packages/dendron-plugin-views/package.json
@@ -97,7 +97,7 @@
     "start": "yarn build:index && node scripts/start.js",
     "setup": "yarn build:index && yarn build:styles",
     "build": "yarn build:dev && yarn build:styles",
-    "build:dev": "yarn setup && env BUILD_DEV=1 node scripts/build.js",
+    "build:dev": "yarn setup && npx cross-env BUILD_DEV=1 node scripts/build.js",
     "build:prod": "yarn setup && node scripts/build.js",
     "build:styles": "node scripts/buildStyles.js",
     "build:index": "node scripts/buildIndex.js",
@@ -183,6 +183,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.176",
-    "@types/mermaid": "^8.2.7"
+    "@types/mermaid": "^8.2.7",
+    "cross-env": "^7.0.3"
   }
 }
