chore/kevin optimize build (#1813)
* chore: remove unused assets during build

* update image path

* update asset location

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -877,7 +877,7 @@
       }
     ]
   },
-  "icon": "assets/images/logo.png",
+  "icon": "media/logo.png",
   "scripts": {
     "webpack": "cross-env SKIP_SENTRY=1 DETECT_CIRCULAR_DEPS=1 webpack --config webpack.dev.js",
     "webpack:dev:watch": "yarn webpack --watch",
