--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -391,7 +391,7 @@
         "command": "dendron.publishExport",
         "title": "Dendron: Publish Export",
         "desc": "Export your notes for publishing.",
-        "docs": "This command works by running `dendron-cli` in the background.",
+        "docs": "",
         "docLink": "",
         "docPreview": ""
       },
@@ -399,7 +399,7 @@
         "command": "dendron.publishDev",
         "title": "Dendron: Publish Dev",
         "desc": "Preview your notes on localhost using publishing",
-        "docs": "This command works by running `dendron-cli` in the background.",
+        "docs": "",
         "docLink": "",
         "docPreview": ""
       },
@@ -457,7 +457,8 @@
         "title": "Dendron: Show Preview (legacy)",
         "desc": "Show Markdown Preview (legacy)",
         "docLink": "dendron.topic.commands.md",
-        "docPreview": ""
+        "docPreview": "",
+        "enablement": "dendron:pluginActive && dendron:hasLegacyPreview"
       },
       {
         "command": "dendron.showPreview",
@@ -465,7 +466,8 @@
         "icon": "$(open-preview)",
         "desc": "Show Markdown Preview",
         "docLink": "dendron.topic.commands.md",
-        "docPreview": ""
+        "docPreview": "",
+        "enablement": "dendron:pluginActive"
       },
       {
         "command": "dendron.pasteFile",
@@ -798,7 +800,6 @@
       },
       {
         "command": "dendron.lookupNoteAutoComplete",
-        "mac": "Tab",
         "key": "Tab",
         "when": "dendron:pluginActive && dendron:noteLookupActive && !editorFocus && !view"
       },
@@ -858,12 +859,14 @@
       {
         "command": "dendron.showLegacyPreview",
         "windows": "windows+ctrl+p",
-        "mac": "cmd+ctrl+p"
+        "mac": "cmd+ctrl+p",
+        "when": "dendron:pluginActive && dendron:hasLegacyPreview"
       },
       {
         "command": "dendron.showPreview",
         "windows": "windows+ctrl+p",
-        "mac": "cmd+ctrl+p"
+        "mac": "cmd+ctrl+p",
+        "when": "dendron:pluginActive"
       }
     ],
     "markdown.previewStyles": [
