feat(notes): Note Trait System Prototype (Phase 1) (#1658)
* feat: type def v1; engineapiservice to v2; journal note replacement with type

* feat: user registration

* spike: rename type to trait

* spike: CR Feedback; EngineAPIService convergence

* spike: tests and tweaks

* spike: casing fixes

* spike: test fixes

* spike: fixing import casing

* spike: CR Feedback

* spike: impl interface update

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -564,6 +564,16 @@
         "command": "dendron.launchTutorial",
         "title": "Dendron: Launch Tutorial",
         "desc": "Launch the Tutorial"
+      },
+      {
+        "command": "dendron.registerNoteTrait",
+        "title": "Dendron: Register Note Trait",
+        "desc": "Register a new Note Trait"
+      },
+      {
+        "command": "dendron.createNoteWithTraits",
+        "title": "Dendron: Create Note with Custom Traits",
+        "desc": "Create a New Note with a User-Defined Traits Applied"
       }
     ],
     "menus": {
