feat(pod): orbit import pod (#1637)
* chore: pod added

* chore: handle mergeconflict

* chore: cli prompt added

* chore: updated TC

* chore: resolved PR comments

* fix: pr comments

* chore: merged master

* chore: resolve PR comments

* chore: updated logs

* chore: added logs and updated check for null attributes

* chore: updated test

--- a/packages/dendron-cli/.vscode/tasks.json
+++ b/packages/dendron-cli/.vscode/tasks.json
@@ -51,11 +51,20 @@
       "problemMatcher": []
     },
     {
-      "label": "import-pod",
+      "label": "gdoc-import-pod",
       "type": "shell",
       "command": "node --inspect dendron_setup/dendron/packages/dendron-cli/lib/bin/dendron-cli importPod --wsRoot ~/Dendron --podId dendron.gdoc --podSource builtin",
       "options": {
         "cwd": "D:/"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "orbit-import-pod",
+      "type": "shell",
+      "command": "node --inspect packages/dendron-cli/lib/bin/dendron-cli importPod --wsRoot ${workspaceFolder}/../test-workspace --podId dendron.orbit --podSource builtin",
+      "options": {
+        "cwd": "D:/dendron_setup/dendron/"
       },
       "problemMatcher": []
     }
