--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
     "setup:cli": "./bootstrap/scripts/chmod-cli.js",
     "setup:npmlogin:local": "npm-cli-adduser -u dendron -p temporarydendronpassword -e test@dendron.com -r http://localhost:4873",
-    "setup:npmlogin:remote": "npm-cli-adduser -u $NPM_USERNAME -p $NPM_PWD -e $NPM_EMAIL -r https://registry.npmjs.org/",
+    "setup:npmlogin:remote": "echo 0",
     "build:prerelease:local": "cross-env UPGRADE_TYPE=prerelease PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
     "build:prerelease:remote": "cross-env UPGRADE_TYPE=prerelease PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
     "build:prerelease:remote:ci": "cross-env UPGRADE_TYPE=prerelease PUBLISH_ENDPOINT=remote BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
