--- a/packages/pods-core/package.json
+++ b/packages/pods-core/package.json
@@ -34,6 +34,7 @@
     "test:unit:debug": "NODE_ENV=test node --inspect-brk node_modules/.bin/jest --runInBand"
   },
   "devDependencies": {
+    "@types/form-data": "^2.5.0",
     "@types/fs-extra": "^9.0.1",
     "@types/klaw": "^3.0.1",
     "@types/lodash": "^4.14.161",
