--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -46,27 +46,29 @@
         {
           "id": "dendron.sample",
           "name": "Sample View",
-          "when": "dendron:devMode",
-          "type": "webview"
+          "contextualTitle": "Sample View",
+          "type": "webview",
+          "when": "dendron:devMode"
         },
         {
           "id": "dendron.calendar-view",
           "name": "Calendar View",
+          "contextualTitle": "Calendar View",
           "type": "webview"
         },
         {
           "id": "dendron.treeView",
           "name": "Tree View",
-          "when": "dendron:pluginActive && !dendron:webUIEnabled",
           "contextualTitle": "Tree View",
+          "when": "dendron:pluginActive && !dendron:webUIEnabled",
           "icon": "media/icons/dendron-vscode.svg"
         },
         {
           "id": "dendron.tree-view",
-          "name": "Tree View V2",
-          "when": "dendron:webUIEnabled",
-          "type": "webview",
+          "name": "Tree View",
           "contextualTitle": "Tree View",
+          "type": "webview",
+          "when": "dendron:webUIEnabled",
           "icon": "media/icons/dendron-vscode.svg"
         },
         {
@@ -402,6 +404,16 @@
         "when": "dendron:pluginActive"
       },
       {
+        "command": "dendron.registerNoteTrait",
+        "title": "Dendron: Register Note Trait",
+        "desc": "Register a new Note Trait in Dendron's Trait System"
+      },
+      {
+        "command": "dendron.createNoteWithTraits",
+        "title": "Dendron: Create Note with Custom Traits",
+        "desc": "Create a New Note with a User-Defined Trait Applied"
+      },
+      {
         "command": "dendron.publishExport",
         "title": "Dendron: Publish Export",
         "desc": "Export your notes for publishing.",
@@ -578,16 +590,6 @@
         "command": "dendron.launchTutorial",
         "title": "Dendron: Launch Tutorial",
         "desc": "Launch the Tutorial"
-      },
-      {
-        "command": "dendron.registerNoteTrait",
-        "title": "Dendron: Register Note Trait",
-        "desc": "Register a new Note Trait"
-      },
-      {
-        "command": "dendron.createNoteWithTraits",
-        "title": "Dendron: Create Note with Custom Traits",
-        "desc": "Create a New Note with a User-Defined Traits Applied"
       }
     ],
     "menus": {
@@ -624,6 +626,11 @@
           "when": "resourceExtname == .md && dendron:pluginActive",
           "command": "dendron.moveNote",
           "group": "2_workspace"
+        },
+        {
+          "command": "dendron.showPreview",
+          "when": "resourceLangId == markdown && dendron:pluginActive",
+          "group": "navigation"
         }
       ],
       "editor/context": [
@@ -638,6 +645,13 @@
           "command": "dendron.showPreview",
           "when": "editorLangId == markdown && !notebookEditorFocused && dendron:pluginActive",
           "group": "navigation"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "command": "dendron.showPreview",
+          "when": "resourceLangId == markdown && dendron:pluginActive",
+          "group": "1_open"
         }
       ]
     },
