--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -777,7 +777,7 @@
         },
         "dendron.watchForNativeWorkspace": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "When enabled, Dendron will watch non-Dendron workspaces to detect when one is created, and will automatically initialize itself. Otherwise, you may need to reload VSCode after creating a native workspace."
         }
       }
