--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "engines" : { "node" : ">=0.14" },
+  "engines": {
+    "node": ">=0.14"
+  },
   "workspaces": {
     "packages": [
       "packages/common-all",
@@ -124,7 +126,6 @@
     "cross-env": "^7.0.3",
     "execa": "^5.0.0",
     "github-slugger": "^1.3.0",
-    "npm-cli-adduser": "^1.1.4",
     "typescript": "^4.1.5",
     "verdaccio-memory": "^10.0.1"
   }
