--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -56,50 +56,39 @@ jobs:
           echo "SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}" >> $GITHUB_ENV
           echo "NODE_OPTIONS=--max_old_space_size=4096" >> $GITHUB_ENV
 
-      - name: Clear Verdaccio Cache
-        run: |
-          if [ -d ~/.config/verdaccio/storage/@dendronhq ]; then echo "Clearing Existing Verdaccio Cache" && rm -Rf ~/.config/verdaccio/storage/@dendronhq; fi
-
       - name: Build the VSIX
         run: |
           yarn build:patch:local:ci
+
+      - name: Check for VSIX
+        run: |
+          vsixCount=`ls ./packages/plugin-core/*.vsix | wc -l | awk '{print $1}'`
+          if [ $vsixCount = 1 ]; then
+            vsix=$(ls ./packages/plugin-core/*.vsix | tail -1)
+            echo "found a single .vsix file named $vsix" 
+            echo "VSIX_FILE_NAME=$(basename $vsix)" >> $GITHUB_ENV
+            echo "VSIX_RELATIVE_PATH=$vsix" >> $GITHUB_ENV
+            else
+            echo "error: expected 1 .vsix file, found $vsixCount"
+            exit 1
+          fi
 
       - name: Upload VSIX Artifact
         uses: actions/upload-artifact@v2
         with:
           name: vsix
-          path: ./packages/plugin-core/*.vsix
+          path: ${{ env.VSIX_RELATIVE_PATH }}
+          if-no-files-found: error
 
-      - name: Prepare Package Manifest
-        run: |
-          DENDRON_CLI=./packages/dendron-cli/lib/bin/dendron-cli.js
-          LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget nightly
-
-      # yarn deploy:vscode (vsce publish) attempts to pull dependencies, so
-      # verdaccio must be running. Verdaccio starts up slowly in the build
-      # environment, so give it time to start up.
       - name: Publish to VS Code Marketplace
         env:
           VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
         working-directory: ./packages/plugin-core
-        run: |
-          npx verdaccio > verdaccio.log  2>&1 &
-          sleep 60
-          echo "checking verdaccio log"
-          cat verdaccio.log
-          echo "Setting registry to local"
-          yarn config set registry http://localhost:4873
-          npm set registry http://localhost:4873/
-          echo "running deploy:vscode"
-          yarn deploy:vscode
+        run: yarn deploy:vscode:vsix ${{ env.VSIX_FILE_NAME }}
 
       - name: Publish to Open VSX Marketplace
         env:
           OVSX_PAT: ${{ secrets.VSCODIUM_PUBLISH_PWD }}
         working-directory: ./packages/plugin-core
-        run: |
-          echo "Setting registry to local"
-          yarn config set registry http://localhost:4873
-          npm set registry http://localhost:4873/
-          echo "running deploy:ovsx"
-          yarn deploy:ovsx
+        run: yarn deploy:ovsx:vsix ${{ env.VSIX_FILE_NAME }}
+
