chore: only show lookup view when note lookup is active

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -76,7 +76,7 @@
           "name": "Lookup View",
           "contextualTitle": "Lookup View",
           "type": "webview",
-          "when": "dendron:webUIEnabled"
+          "when": "dendron:webUIEnabled && dendron:noteLookupActive"
         },
         {
           "id": "dendron.backlinks",
