chore: added dev mode WHEN clause

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -611,6 +611,10 @@
         {
           "command": "dendron.convertCandidateLink",
           "when": "false"
+        },
+        {
+          "command": "dendron.dev.devTrigger",
+          "when": "dendron:devMode"
         }
       ],
       "view/title": [
