feat: open preview buttons for context menus (#1906)
* feat: add Dendron preview button to context menus

* chore: allow sanity check to access opts

This is useful for commands that get opts passed in by VSCode, for example Show Preview.

* enhance: allow note preview to be started with a specific note

* enhance: show preview opens preview for selected note, and falls back to default preview for files outside engine

* enhance: preview can now render markdown files not in WS

* chore: remove dummy notes from engine once done rendering

* chore: fix failing test

* chore: fix bad import

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -657,6 +657,11 @@
           "when": "resourceExtname == .md && dendron:pluginActive",
           "command": "dendron.moveNote",
           "group": "2_workspace"
+        },
+        {
+          "command": "dendron.showPreview",
+          "when": "resourceLangId == markdown && dendron:pluginActive",
+          "group": "navigation"
         }
       ],
       "editor/context": [
@@ -671,6 +676,13 @@
           "command": "dendron.showPreview",
           "when": "editorLangId == markdown && !notebookEditorFocused && dendron:pluginActive",
           "group": "navigation"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "command": "dendron.showPreview",
+          "when": "resourceLangId == markdown && dendron:pluginActive",
+          "group": "1_open"
         }
       ]
     },
