chore: add DevTrigger command for more convinient development environment (#1986)
* chore: add DevTrigger command for more convinient development environment

* chore: added dev mode WHEN clause

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -580,6 +580,11 @@
         "docs": "This is useful when diagnosing issues in Dendron"
       },
       {
+        "command": "dendron.dev.devTrigger",
+        "title": "Dendron:Dev: Dev Trigger",
+        "desc": "Command to use for development to trigger some arbitrary piece of code."
+      },
+      {
         "command": "dendron.dev.resetConfig",
         "title": "Dendron:Dev: Reset Config",
         "desc": "Reset the config"
@@ -618,6 +623,10 @@
         {
           "command": "dendron.convertCandidateLink",
           "when": "false"
+        },
+        {
+          "command": "dendron.dev.devTrigger",
+          "when": "dendron:devMode"
         }
       ],
       "view/title": [
